src/tests/testfiles/function-calls/parameter-type-7.txt
Error at 8:5: Number of arguments to function f does not match definition (have 1, need 0)
f(0.0);
^
